- Fixed subscribing to IMAP folders
- Removed invalid l char that was displayed on login screen
- When adding an email to an existing contact the dialog will find contact without mail address as well
- The Edit button on the dialog that asks if you when to add an email to an existing contact is renamed to "Merge"

15-03-2013 4.1.46
- Encode attachment string parts in z-push2 synced emails
- Fixed bug with showing all contact customfield tabs in the settings dialog
- Undefined time in portlet
- Updated Norwegian and Brasilian Portugese
- Automatic mail checker will run again

14-03-2013 4.1.45
- Strip unsupported datastore options from synthesis syncml client
- Added "checker_interval" option for config.php to change to interval for the automatic mail checker
- Fixed sending timeregistration approval email when closing week (uses new Swift mailer)
- Fixed problem with enabling of users and groups tab in the cron dialog.
- added options to user administration dialog for selection contact customfields tabs for displaying in the Global settings panel.
- Updated Croatian
- Popup reminders: improved handling of date and time when editing popup reminder.
- Fixed host config autodetection and time format selection at install time
- Updated Norwegian
- Fixed empty event dialog bug in firefox

12-03-2013 4.1.44
- IMPORTANT: New cron / task scheduler system. If you installed manually you must adjust
  the cron job as descripbed here: http://wiki4.group-office.com/wiki/Manual_install_on_other_Linux,_Windows_or_Mac_systems#Cron_job
- e-mail checker could update with wrong number sometimes
- Added support_link config option
- Tasks and contacts clickable in calendar
- Signed GOTA for 6 months.
- ExtJS base translations were missing
- Updated French
- Updating copy sieve rules could delete rule
- Editing an event in the month grid for the second time without refreshing 
  loaded an empty dialog.
- Description missing in caldav.

08-03-2013 4.1.43