@@ -5,4 +5,4 @@ svn update
 
 cd www/modules
 
-svn update sync/ billing/ legalhorizons/ professional/ projects/ webshop/ gota/ customfields/ dealermanager/ licenses hoursapproval timeregistration documenttemplates savemailas tickets z-push filesearch caldav syncml workflow scanbox googledrive
+svn update sync/ billing/ legalhorizons/ professional/ projects/ webshop/ gota/ licenses hoursapproval timeregistration documenttemplates savemailas tickets z-push filesearch caldav syncml workflow scanbox googledrive
